# parchwellcome

./: .flake8  .pre-commit-config.yaml  README.md  parchwellcome.desktop  pyproject.toml
data/: advanced.json  default.json  preferences.json
docs/: conf.py  index.rst
resources/: parchwellcome.ui
src/parchwellcome/: __main__.py  exc.py  logger.py  ui.py  utils.py
ui/: Parch-hello.glade
