[project]
name = "parchwellcome"
version = "0.1.0"
description = "an application to greet users when first Enter the Parchlinux"
authors = [
    {name = "komeil Parseh", email = "ahmdparsh129@gmail.com"},
]
dependencies = [
    "pyqt5>=5.15.7",
    "colorlog>=6.6.0",
    "click>=8.1.3",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.1.2",
    "coverage>=6.4.4",
    "flake8>=5.0.4",
    "black>=22.6.0",
    "pre-commit>=2.20.0",
    "reorder-python-imports>=3.8.2",
    "pyupgrade>=2.37.3",
    "mypy>=0.971",
]
